--- a/Orders-and-Notifications-Manager/pom.xml
+++ b/Orders-and-Notifications-Manager/pom.xml
@@ -2,20 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
+
+    <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.Orders-and-Notifications-Manager</groupId>
-	<artifactId>Orders-and-Notifications-Manager</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>Orders-and-Notifications-Manager</name>
-	<description>Development of notification and order managers</description>
-	<properties>
-		<java.version>21</java.version>
+    <artifactId>Orders-and-Notifications-Manager</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>Orders-and-Notifications-Manager</name>
+    <description>Development of notification and order managers</description>
+
+    <properties>
+        <spring-security.version>6.2.1</spring-security.version>
+        <spring.version>6.1.2</spring.version>
+        <java.version>21</java.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -27,6 +33,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 	</dependencies>
 
 	<build>
